# thumbs

./: .clippy.toml  Cargo.toml  main.rs
src/: main.rs
src/img/: mod.rs
src/routes/: mod.rs
