[package]
name = "thumbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
clap = { version = "4.5.18", features = ["derive"] }
sha2 = "0.10.8"
blake3 = "1.5.4"
lru = "0.12.4"
lazy_static = "1.5.0"
log = "0.4.22"
env_logger = "0.11.5"

